--- a/main.css
+++ b/main.css
@@ -10,7 +10,11 @@ h1 {
    color:white
  }
  .gpelements{
+   display:flex;
+   flex-direction: column;
    justify-content: center;
+   align-items: center;
+   flex:1;
  }
  div{
    font-family: Gallows;
