--- a/main.css
+++ b/main.css
@@ -5,7 +5,16 @@
 .container{
   display: flex;
 }
-h1 {
+
+
+.navbar{
+    height:5em;
+    background-color: black;
+    width: 100%;
+    padding:1px;
+    margin:1px;
+}
+  h1{
    font-family: Gallows;
    color:white
  }
