--- a/main.css
+++ b/main.css
@@ -6,7 +6,6 @@
   display: flex;
 }
 
-
 .navbar{
     height:5em;
     background-color: black;
@@ -34,6 +33,8 @@
    color:red;
  }
  body {
+   padding:0;
+   margin:0;
    background-color: black;
    background:url(1.jpg) no-repeat center center fixed;
    background-size: cover;
